--- a/src/main/resources/templates/administration/administration.html
+++ b/src/main/resources/templates/administration/administration.html
@@ -15,7 +15,7 @@
                         <hr />
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-4">
                             <div class="card">
                                 <div class="card-header">
                                     <h3>Gestionnaires de bénévoles</h3>
@@ -41,7 +41,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-4">
                             <div class="card">
                                 <div class="card-header">
                                     <h3>Gestionnaires de missions</h3>
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-4">
                             <div class="card">
                                 <div class="card-header">
                                     <h3>Administrateurs</h3>
