--- a/src/main/resources/templates/administration/edit-volunteer-with-role.html
+++ b/src/main/resources/templates/administration/edit-volunteer-with-role.html
@@ -17,10 +17,12 @@
                                 <div class="form-group">
                                     <label for="lastName" class="col-form-label">Nom :</label>
                                     <input th:field="*{lastName}" type="text" id="lastName" class="form-control" required="required" autocomplete="family-name">
+                                    <p th:if="${#fields.hasErrors('lastName')}" class="text-danger" th:errors="*{lastName}"></p>
                                 </div>
                                 <div class="form-group">
                                     <label for="firstName" class="col-form-label">Prénom :</label>
                                     <input th:field="*{firstName}" type="text" id="firstName" class="form-control" required="required" autocomplete="given-name">
+                                    <p th:if="${#fields.hasErrors('firstName')}" class="text-danger" th:errors="*{firstName}"></p>
                                 </div>
                                 <div class="form-group">
                                     <label for="email" class="col-form-label">Email :</label>
