--- a/src/main/resources/templates/mission-types/edit-mission-type.html
+++ b/src/main/resources/templates/mission-types/edit-mission-type.html
@@ -15,6 +15,7 @@
                     <div class="form-group">
                         <label for="name" class="col-form-label">Type de Mission :</label>
                         <input th:field="*{name}" type="text" id="name" class="form-control" required="required" autocomplete="off">
+                        <p th:if="${#fields.hasErrors('name')}" class="text-danger" th:errors="*{name}"></p>
                     </div>
                     <div class="form-group">
                         <label for="description" class="col-form-label">Description :</label>
