--- a/src/main/resources/templates/missions/new-mission/create-new-mission.html
+++ b/src/main/resources/templates/missions/new-mission/create-new-mission.html
@@ -13,6 +13,7 @@
                         <div class="form-group">
                             <label for="name" class="col-form-label">Nom de la Mission :</label>
                             <input th:field="*{title}" type="text" id="name" class="form-control" required="required">
+                            <p th:if="${#fields.hasErrors('title')}" class="text-danger" th:errors="*{title}"></p>
                         </div>
                         <div class="form-group">
                             <label for="missionType" class="col-form-label">Type de mission :</label>
