--- a/src/main/resources/templates/missions/planned-mission/edit-planned-mission.html
+++ b/src/main/resources/templates/missions/planned-mission/edit-planned-mission.html
@@ -16,6 +16,7 @@
                     <div class="form-group">
                         <label for="name" class="col-form-label">Nom de la Mission :</label>
                         <input th:field="*{title}" type="text" id="name" class="form-control" required="required">
+                        <p th:if="${#fields.hasErrors('title')}" class="text-bg-danger" th:errors="*{title}"></p>
                     </div>
                     <div class="form-group">
                         <label for="description" class="col-form-label">Description :</label>
