--- a/src/main/resources/templates/profil/profil.html
+++ b/src/main/resources/templates/profil/profil.html
@@ -13,7 +13,7 @@
                     <div class="card">
                         <div class="card-header">
                             <a class="btn btn-primary" th:href="@{/volunteers/edit/{id}(id=${volunteer.uuid},source='profil')}">Éditer le Profil</a>
-                            <a class="btn btn-warning" th:href="@{/administration/profil/change-password}">Modifier le Mot de Passe</a>
+                            <a class="btn btn-warning" th:href="@{/profil/change-password}">Modifier le Mot de Passe</a>
                         </div>
                         <div class="card-body">
                             <div class="row">
