--- a/src/main/resources/templates/create-admin.html
+++ b/src/main/resources/templates/create-admin.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="card col-lg-6 col-md-6 justify-content-center container py-4"">
+        <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
             <div class="card-header">
                 <h1>Nouvel administrateur</h1>
                 <p>Attention, il s'agit de la première connexion à l'application.</p>
